definitions/ingress/09-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pro-ing
  namespace: default
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: prometheus.netquest.digital
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
  - host: alertmanager.netquest.digital
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
  - host: grafana.netquest.digital
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
