definitions/ingress/kubeops_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeops
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - kubeops.net
    - www.kubeops.net
    secretName: kube-lego-account
  rules:
  - host: kubeops.net
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 30000
        path: /
  - host: www.kubeops.net
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 30000
        path: /
